--- a/style.css
+++ b/style.css
@@ -66,3 +66,18 @@ body, html {
   box-shadow: 0 0 30px #ff0;
   transition: transform 0.3s ease-in-out;
 }
+.reel {
+  font-size: 100px;
+  width: 120px;
+  height: 120px;
+  line-height: 120px;
+  background: #222;
+  border-radius: 15px;
+  box-shadow: 0 0 30px #ff0;
+  transition: transform 0.3s ease-in-out;
+}
+
+/* 👇 TU DODAJESZ */
+.reel:hover {
+  box-shadow: 0 0 50px gold, 0 0 20px red, 0 0 20px blue;
+  transform: scale(1.1);
